--- a/crd/helloworld.yaml
+++ b/crd/helloworld.yaml
@@ -1,13 +1,19 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: helloworld.release-exercise
+  name: helloworlds.release-exercise.sourcegraph.com
 spec:
-  group: release-exercise
+  group: release-exercise.sourcegraph.com
   versions:
     - name: v1
       served: true
       storage: true
+      schema:
+        openAPIV3Schema:
+          type: object
+          properties:
+            message:
+              type: string
 
   # Namespaced b/c helloworld resources map to pods, and we need to decide to put the pod somewhere
   scope: Namespaced
@@ -15,10 +21,3 @@ spec:
     plural: helloworlds
     singular: helloworld
     kind: HelloWorld
-
-  validation:
-    openAPIV3Schema:
-      type: object
-      properties:
-        message:
-          type: string
