--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -14,6 +14,7 @@ runtimes:
     - python@3.10.8
 lint:
   enabled:
+    - gofmt@1.20.4
     - checkov@3.0.15
     - git-diff-check
     - osv-scanner@1.4.2
