feat: get the controller built and running

--- a/config/crd/bases/release-exercise.sourcegraph.com.release-exercise.sourcegraph.com_helloworlds.yaml
+++ b/config/crd/bases/release-exercise.sourcegraph.com.release-exercise.sourcegraph.com_helloworlds.yaml
@@ -37,9 +37,7 @@ spec:
               description: HelloWorldSpec defines the desired state of HelloWorld
               properties:
                 message:
-                  description:
-                    Foo is an example field of HelloWorld. Edit helloworld_types.go
-                    to remove/update
+                  description: This is the Message we want to echo
                   type: string
               type: object
             status:
