feat: finish implementation... i think?

--- a/config/samples/release-exercise.sourcegraph.com_v1_helloworld.yaml
+++ b/config/samples/release-exercise.sourcegraph.com_v1_helloworld.yaml
@@ -9,4 +9,4 @@ metadata:
     app.kubernetes.io/created-by: release-exercise-sxlijin
   name: helloworld-sample
 spec:
-  # TODO(user): Add fields here
+  message: "This is a new helloworld sample!"
